# msgxchng-c

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
include/: msgxchng.h
src/: Makefile.am  msgxchng.c
test/: Makefile.am  run-test.c
